force-app/main/default/objects/Inward_Session__c/Inward_Session__c.object-meta.xml
<CustomObject>
    <label>Inward Session</label>
    <nameField>
        <displayFormat>IS-{0000}</displayFormat>
        <label>Session Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inward Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>