force-app/main/default/objects/Inward_Session__c/fields/Total_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Total_Duplicate__c</fullName>
    <label>Total Duplicate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>