force-app/main/default/objects/Inward_Session__c/fields/Total_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Total_Rejected__c</fullName>
    <label>Total Rejected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>