force-app/main/default/objects/Inward_Session__c/fields/Total_Scanned__c.field-meta.xml
<CustomField>
    <fullName>Total_Scanned__c</fullName>
    <label>Total Scanned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>