force-app/main/default/objects/Inward_Session__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Warehouse</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Inward Sessions</relationshipLabel>
    <relationshipName>Inward_Sessions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>